# wordle

./: LICENSE  README.md  pyproject.toml  setup.cfg
wordle/: __init__.py  board.py  cli.py  exceptions.py  guess.py  letter.py  locale.py  main.py  modes.py  puzzle.py  wordle.py
wordle/data/: en_us.json  pt_br.json
