[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "Play Wordle directly from your terminal."
authors = ["Lucas Cavalcante da Silva <silva.lucasdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.942"
isort = "^5.10.1"

[tool.poetry.scripts]
wordle = "wordle.main:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
# TLDR: Strict by default and loose when needed
[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
